<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022 The Jerry xu Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/remarks"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_16">

                <TextView
                    android:id="@+id/tv_developer_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/developer_remarks" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:text="@string/thanks" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/listChoiceBackgroundIndicator"
                    android:paddingStart="@dimen/dimen_16"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingEnd="@dimen/dimen_16"
                    android:paddingBottom="@dimen/dimen_12">

                    <ImageView
                        android:id="@+id/iv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:contentDescription="@string/other_version"
                        android:src="@drawable/ic_baseline_new_releases_24" />

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iv_version"
                        android:text="@string/other_version"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/tv_version_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_version"
                        android:layout_toEndOf="@+id/iv_version"
                        tools:text="0.1.0（2022-05-04）" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0.5"
                    android:background="?android:attr/listDivider" />

                <RelativeLayout
                    android:id="@+id/rl_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/listChoiceBackgroundIndicator"
                    android:paddingStart="@dimen/dimen_16"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingEnd="@dimen/dimen_16"
                    android:paddingBottom="@dimen/dimen_12">

                    <ImageView
                        android:id="@+id/iv_log"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:contentDescription="@string/release_note"
                        android:src="@drawable/ic_baseline_emoji_events_24" />

                    <TextView
                        android:id="@+id/tv_log"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iv_log"
                        android:text="@string/release_note"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_log"
                        android:layout_toEndOf="@+id/iv_log"
                        android:autoLink="web"
                        android:text="@string/lawrefbook_log"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="?android:attr/listDivider" />

                <RelativeLayout
                    android:id="@+id/rl_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/listChoiceBackgroundIndicator"
                    android:paddingStart="@dimen/dimen_16"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingEnd="@dimen/dimen_16"
                    android:paddingBottom="@dimen/dimen_12">

                    <ImageView
                        android:id="@+id/iv_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:contentDescription="@string/source_code"
                        android:src="@drawable/ic_github_24px" />

                    <TextView
                        android:id="@+id/tv_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iv_github"
                        android:text="@string/source_code"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_github"
                        android:layout_toEndOf="@+id/iv_github"
                        android:autoLink="web"
                        android:text="@string/github_lawrefbook"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0.5"
                    android:background="?android:attr/listDivider" />

                <RelativeLayout
                    android:id="@+id/rl_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/listChoiceBackgroundIndicator"
                    android:paddingStart="@dimen/dimen_16"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingEnd="@dimen/dimen_16"
                    android:paddingBottom="@dimen/dimen_12">

                    <ImageView
                        android:id="@+id/iv_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:contentDescription="@string/privacy_des"
                        android:src="@drawable/ic_baseline_privacy_tip_24" />

                    <TextView
                        android:id="@+id/tv_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iv_privacy"
                        android:text="@string/privacy_des"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_privacy"
                        android:layout_toEndOf="@+id/iv_privacy"
                        android:autoLink="web"
                        android:text="@string/privacy_address"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0.5"
                    android:background="?android:attr/listDivider" />

                <RelativeLayout
                    android:id="@+id/rl_praise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/listChoiceBackgroundIndicator"
                    android:paddingStart="@dimen/dimen_16"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingEnd="@dimen/dimen_16"
                    android:paddingBottom="@dimen/dimen_12">

                    <ImageView
                        android:id="@+id/iv_praise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:contentDescription="@string/source_code"
                        android:src="@drawable/ic_baseline_star_half_24" />

                    <TextView
                        android:id="@+id/tv_praise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iv_praise"
                        android:text="@string/praise"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_praise"
                        android:layout_toEndOf="@+id/iv_praise"
                        android:text="@string/praise_desc" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0.5"
                    android:background="?android:attr/listDivider" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/developers"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/listChoiceBackgroundIndicator"
                    android:paddingStart="@dimen/dimen_16"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingEnd="@dimen/dimen_16"
                    android:paddingBottom="@dimen/dimen_12">

                    <ImageView
                        android:id="@+id/iv_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:contentDescription="@string/author"
                        android:src="@drawable/ic_baseline_done_all_24" />

                    <TextView
                        android:id="@+id/tv_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iv_author"
                        android:text="@string/author"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_author"
                        android:layout_toEndOf="@+id/iv_author"
                        android:text="@string/developer_designer" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0.5"
                    android:background="?android:attr/listDivider" />

                <RelativeLayout
                    android:id="@+id/rl_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/listChoiceBackgroundIndicator"
                    android:paddingStart="@dimen/dimen_16"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingEnd="@dimen/dimen_16"
                    android:paddingBottom="@dimen/dimen_12">

                    <ImageView
                        android:id="@+id/iv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:contentDescription="@string/author_email"
                        android:src="@drawable/ic_baseline_mail_outline_24" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iv_email"
                        android:text="@string/feedback"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_email"
                        android:layout_toEndOf="@+id/iv_email"
                        android:text="@string/author_email" />
                </RelativeLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>